RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -96,7 +96,8 @@ LIMIT 10;
 
 * 해석
 	* 첫 번째 라인의 테이블이 <derived2>로 보아 쿼리의 id가2번인 라인이 먼저 실행되고 그 결과 파생 테이블.
-	* 세 번째 라인의 쿼리 id 2번을 보면 select_type이 DERIVED
+	* 세 번째 라인의 쿼리 id 2번을 보면 select_type이 DERIVED로 표시 되어 있음. 즉, dept_emp를 읽어서 파생 테이블을 생성.
+	* 첫 번째 라인과 두 번째 라인이 같은 id값을 가지고 있는 것으로 봐서 
 
 
 ```
@@ -109,10 +110,10 @@ WHERE e.emp_no=tb.emp_no;
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc1NzA0OTc1NCwtMTA1OTM4NTQ0LDgyND
-k4NTA5NywxMjk0MDYwMzc3LDE0OTI3NTM3MDYsMTQ2MDE5NzUz
-Miw3MjcwMjM5NjgsMTg1NzY3MDQxNiwtNzc3OTMwNzI3LDY4Nj
-IzMzQwOSwxMDQ2NDg4NzA2LC0xMzEzNzA1MDU0LC0xMDc3NTU1
-MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF
-19
+eyJoaXN0b3J5IjpbLTE2ODAwNzAxODMsLTEwNTkzODU0NCw4Mj
+Q5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0NjAxOTc1
+MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3NzkzMDcyNyw2OD
+YyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1
+NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0Mj
+BdfQ==
 -->
