RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -98,7 +98,7 @@ LIMIT 10;
 	* 첫 번째 라인의 테이블이 <derived2>로 보아 쿼리의 id가2번인 라인이 먼저 실행되고 그 결과 파생 테이블.
 	* 세 번째 라인의 쿼리 id 2번을 보면 select_type이 DERIVED로 표시 되어 있음. 즉, dept_emp를 읽어서 파생 테이블을 생성.
 	* 첫 번째 라인과 두 번째 라인이 같은 id값을 가지고 있는 것으로 봐서 2개 테이블(<derived2> 와 e)는 조인되는 쿼리.
-	* 
+	* <derived2>테이블이  e 테이블보다 먼저 표시 됐기 때문에 <derived2> 테이블을 먼저 읽어서 e 테이블로 조인을 실행.
 
 
 ```
@@ -111,10 +111,10 @@ WHERE e.emp_no=tb.emp_no;
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgyND
-k4NTA5NywxMjk0MDYwMzc3LDE0OTI3NTM3MDYsMTQ2MDE5NzUz
-Miw3MjcwMjM5NjgsMTg1NzY3MDQxNiwtNzc3OTMwNzI3LDY4Nj
-IzMzQwOSwxMDQ2NDg4NzA2LC0xMzEzNzA1MDU0LC0xMDc3NTU1
-MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF
-19
+eyJoaXN0b3J5IjpbNTA0MjA1Nzg2LDEwNzcwMzYxMDgsLTEwNT
+kzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2
+LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3Nz
+kzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1
+NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLT
+E4MzkzNzY0MjBdfQ==
 -->
