RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -109,12 +109,12 @@ FROM
 	employees e
 WHERE e.emp_no=tb.emp_no;
 ```
-
+### 6.2.4 type 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTA0MjA1Nzg2LDEwNzcwMzYxMDgsLTEwNT
-kzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2
-LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3Nz
-kzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1
-NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLT
-E4MzkzNzY0MjBdfQ==
+eyJoaXN0b3J5IjpbMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0xMD
+U5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1Mzcw
+NiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2LC03Nz
+c5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMTM3MDUw
+NTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0NiwxOTQ4NTc1MDU0LC
+0xODM5Mzc2NDIwXX0=
 -->
