RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -110,11 +110,12 @@ FROM
 WHERE e.emp_no=tb.emp_no;
 ```
 ### 6.2.4 type 칼럼
+* **sys
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0xMD
-U5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1Mzcw
-NiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2LC03Nz
-c5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMTM3MDUw
-NTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0NiwxOTQ4NTc1MDU0LC
-0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbLTE3NzcwNzYwNjYsMTU0MDg4MTg0MSwxMD
+c3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAz
+NzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxOD
+U3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3
+MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0Ni
+wxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
 -->
