RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -110,12 +110,23 @@ FROM
 WHERE e.emp_no=tb.emp_no;
 ```
 ### 6.2.4 type 칼럼
-* **sys
+* **system**
+* **const**
+* **eq_ref**
+* **ref**
+* **fulltest**
+* **ref_or_null**
+* **unique_subquery**
+* **index_subquery**
+* **range**
+* **index_merge**
+* **index**
+* ALL*
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NzcwNzYwNjYsMTU0MDg4MTg0MSwxMD
-c3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAz
-NzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxOD
-U3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3
-MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0Ni
-wxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbMTg1MjU5NzkxNCwxNTQwODgxODQxLDEwNz
+cwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3
+NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NT
+c2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcw
+NiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LD
+E5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
