--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -121,9 +121,9 @@ WHERE e.emp_no=tb.emp_no;
 * **range**
 * **index_merge**
 * **index**
-* ALL*
+* **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg1MjU5NzkxNCwxNTQwODgxODQxLDEwNz
+eyJoaXN0b3J5IjpbMTU2OTA0NDYyNCwxNTQwODgxODQxLDEwNz
 cwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3
 NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NT
 c2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcw
