RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -110,6 +110,7 @@ FROM
 WHERE e.emp_no=tb.emp_no;
 ```
 ### 6.2.4 type 칼럼
+MySQL 서버가 각 테이블
 * **system**
 * **const**
 * **eq_ref**
@@ -123,7 +124,7 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU2OTA0NDYyNCwxNTQwODgxODQxLDEwNz
+eyJoaXN0b3J5IjpbLTI1ODE3MzI5OSwxNTQwODgxODQxLDEwNz
 cwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3
 NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NT
 c2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcw
