RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -110,7 +110,7 @@ FROM
 WHERE e.emp_no=tb.emp_no;
 ```
 ### 6.2.4 type 칼럼
-MySQL 서버가 각 테이블
+MySQL 서버가 각 테이블의 레코드를 어떤 방식(인덱스를)으로 읽었는지를 의미. 일반적으로 쿼리를 튜닝할 때 인덱스를 효율적으로 사용하는지 확인하는 것이 중요하므로 TYPE 칼럼은 중요.
 * **system**
 * **const**
 * **eq_ref**
@@ -124,7 +124,7 @@ MySQL 서버가 각 테이블
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI1ODE3MzI5OSwxNTQwODgxODQxLDEwNz
+eyJoaXN0b3J5IjpbMTYyODE1OTk0OSwxNTQwODgxODQxLDEwNz
 cwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3
 NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NT
 c2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcw
