RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -110,7 +110,9 @@ FROM
 WHERE e.emp_no=tb.emp_no;
 ```
 ### 6.2.4 type 칼럼
-MySQL 서버가 각 테이블의 레코드를 어떤 방식(인덱스를)으로 읽었는지를 의미. 일반적으로 쿼리를 튜닝할 때 인덱스를 효율적으로 사용하는지 확인하는 것이 중요하므로 TYPE 칼럼은 중요.
+*MySQL 서버가 각 테이블의 레코드를 어떤 방식(인덱스를 사용한 접근 방식 또는 풀 스캔)으로 읽었는지를 의미.* 일반적으로 쿼리를 튜닝할 때 인덱스를 효율적으로 사용하는지 확인하는 것이 중요하므로 TYPE 칼럼은 중요.
+
+성능이 빠른 수
 * **system**
 * **const**
 * **eq_ref**
@@ -124,10 +126,10 @@ MySQL 서버가 각 테이블의 레코드를 어떤 방식(인덱스를)으로 
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYyODE1OTk0OSwxNTQwODgxODQxLDEwNz
-cwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3
-NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NT
-c2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcw
-NiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LD
-E5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
+eyJoaXN0b3J5IjpbMzAyNjg1ODEzLDE1NDA4ODE4NDEsMTA3Nz
+AzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3
+LDE0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1Nz
+Y3MDQxNiwtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2
+LC0xMzEzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMT
+k0ODU3NTA1NCwtMTgzOTM3NjQyMF19
 -->
