RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -112,8 +112,9 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.4 type 칼럼
 *MySQL 서버가 각 테이블의 레코드를 어떤 방식(인덱스를 사용한 접근 방식 또는 풀 스캔)으로 읽었는지를 의미.* 일반적으로 쿼리를 튜닝할 때 인덱스를 효율적으로 사용하는지 확인하는 것이 중요하므로 TYPE 칼럼은 중요.
 
-성능이 빠른 수
+성능이 빠른 순서대로 나열.
 * **system**
+	* 
 * **const**
 * **eq_ref**
 * **ref**
@@ -126,10 +127,10 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzAyNjg1ODEzLDE1NDA4ODE4NDEsMTA3Nz
-AzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3
-LDE0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1Nz
-Y3MDQxNiwtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2
-LC0xMzEzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMT
-k0ODU3NTA1NCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMD
+c3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAz
+NzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxOD
+U3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3
+MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0Ni
+wxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
 -->
