RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -166,10 +166,15 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 인덱스 사용 불가하므로 풀 스캔
 		* 가능한 한 피해야 하는 방법
 ![파티션 선택 불가 + 인덱스 효율적 사용 불가](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.57.21.png)
-
+#### 파티션 테이블의 인덱스 스캔과 정렬
+* MySQL의 파티션 테이블 인덱스 특징
+	* 로컬 인덱스
+	* **인덱스는 파티션 단위로 생성됨**
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
-AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
-MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
-M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbODk5ODU4MTAxLDY3NzkyNTA5NiwtMTA3MD
+M3MjQzMywtMTMwMDYwNjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4
+LDQxOTU4OTMsLTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1Nz
+U3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1
+OThdfQ==
 -->
