RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -170,11 +170,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 * MySQL의 파티션 테이블 인덱스 특징
 	* 로컬 인덱스
 	* **인덱스는 파티션 단위로 생성됨**
-	* 
+	* 파티션에 관계없이 테이블 전체 단위로 글로벌하게 **하나로 통합된 인덱스는 지원하지 않음**
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODk5ODU4MTAxLDY3NzkyNTA5NiwtMTA3MD
-M3MjQzMywtMTMwMDYwNjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4
-LDQxOTU4OTMsLTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1Nz
-U3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1
-OThdfQ==
+eyJoaXN0b3J5IjpbLTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMD
+cwMzcyNDMzLC0xMzAwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0
+ODgsNDE5NTg5MywtMTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMz
+U3NTc4MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2
+NzU5OF19
 -->
