RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -171,11 +171,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* 로컬 인덱스
 	* **인덱스는 파티션 단위로 생성됨**
 	* 파티션에 관계없이 테이블 전체 단위로 글로벌하게 **하나로 통합된 인덱스는 지원하지 않음**
-* 
+*  예시
+	* reg_userid 칼럼으로 만들어진 인데스가 어떻게 구성되고 인덱스도 연동별로 파티션되어 저장됨
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMD
-cwMzcyNDMzLC0xMzAwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0
-ODgsNDE5NTg5MywtMTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMz
-U3NTc4MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2
-NzU5OF19
+eyJoaXN0b3J5IjpbLTcwMzg1ODEwMCwtMTc0MzI0OTg5NCw2Nz
+c5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOTg2MTUy
+MDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4LDE5Mj
+cwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLTExMTMx
+Mjc3OSwxNTA5NzY3NTk4XX0=
 -->
