RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -173,11 +173,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* 파티션에 관계없이 테이블 전체 단위로 글로벌하게 **하나로 통합된 인덱스는 지원하지 않음**
 *  예시
 	* reg_userid 칼럼으로 만들어진 인데스가 어떻게 구성되고 인덱스도 연동별로 파티션되어 저장됨
+![인덱스와 데이터를 읽는 방법](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-05-28-00-22-00.jpeg)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcwMzg1ODEwMCwtMTc0MzI0OTg5NCw2Nz
-c5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOTg2MTUy
-MDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4LDE5Mj
-cwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLTExMTMx
-Mjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbLTY3MDM0OTU1NCwtNzAzODU4MTAwLC0xNz
+QzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYw
+NjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMj
+Y0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2
+ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
