RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -174,9 +174,11 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 *  예시
 	* reg_userid 칼럼으로 만들어진 인데스가 어떻게 구성되고 인덱스도 연동별로 파티션되어 저장됨
 ![인덱스와 데이터를 읽는 방법](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-05-28-00-22-00.jpeg)
-
+		* reg_userid 칼럼의 값은 파티션의 순서대로 정렬되지 않음
+		* 즉, 파티션되지 않은 테이블에서 인덱스 순서대로 읽으면 정렬된 결과를 바로 얻을 수 있지만, 파티션된 테이블에서는 그렇지 않음
+		* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY3MDM0OTU1NCwtNzAzODU4MTAwLC0xNz
+eyJoaXN0b3J5IjpbMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNz
 QzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYw
 NjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMj
 Y0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2
