--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -176,11 +176,17 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 ![인덱스와 데이터를 읽는 방법](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-05-28-00-22-00.jpeg)
 		* reg_userid 칼럼의 값은 파티션의 순서대로 정렬되지 않음
 		* 즉, 파티션되지 않은 테이블에서 인덱스 순서대로 읽으면 정렬된 결과를 바로 얻을 수 있지만, 파티션된 테이블에서는 그렇지 않음
-		* 
+	* 여러개의 파티션을 읽어야 할 때 결과가 인덱스 칼럼으로 정렬될지에 대한 예제
+```
+SELECT * FROM tb_article 
+WHERE reg)userid
+```
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNz
-QzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYw
-NjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMj
-Y0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2
-ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbLTc3ODc5NTc4MCwyMTI4OTcyMDgyLC03MD
+M4NTgxMDAsLTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcy
+NDMzLC0xMzAwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsND
+E5NTg5MywtMTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4
+MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF
+19
 -->
