--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -177,16 +177,18 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* reg_userid 칼럼의 값은 파티션의 순서대로 정렬되지 않음
 		* 즉, 파티션되지 않은 테이블에서 인덱스 순서대로 읽으면 정렬된 결과를 바로 얻을 수 있지만, 파티션된 테이블에서는 그렇지 않음
 	* 여러개의 파티션을 읽어야 할 때 결과가 인덱스 칼럼으로 정렬될지에 대한 예제
-```
-SELECT * FROM tb_article 
-WHERE reg)userid
-```
+		```
+		SELECT * FROM tb_article 
+		WHERE reg_userid BETWEEN 'brew' AND 'toto'
+		ORDER BY reg_userid;
+		```
+		*  
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3ODc5NTc4MCwyMTI4OTcyMDgyLC03MD
-M4NTgxMDAsLTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcy
-NDMzLC0xMzAwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsND
-E5NTg5MywtMTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4
-MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF
-19
+eyJoaXN0b3J5IjpbODExMDIxMzgwLDIxMjg5NzIwODIsLTcwMz
+g1ODEwMCwtMTc0MzI0OTg5NCw2Nzc5MjUwOTYsLTEwNzAzNzI0
+MzMsLTEzMDA2MDY1NywtOTg2MTUyMDA1LDcyODAzNDQ4OCw0MT
+k1ODkzLC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUsLTEzNTc1Nzgy
+MDQsLTE4MzY3Njg5ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX
+0=
 -->
