RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -206,13 +206,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		WHERE reg_userid BETWEEN 'brew' AND 'toto'
 		ORDER BY reg_userid;
 		```
-		*  
-
+![select explain 결과](https://github.com/tatarobo/Study/blob/master/RealMysql/image/pic13-2.png)
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzc4MDc1NzQwLDgxMTAyMTM4MCwyMTI4OT
-cyMDgyLC03MDM4NTgxMDAsLTE3NDMyNDk4OTQsNjc3OTI1MDk2
-LC0xMDcwMzcyNDMzLC0xMzAwNjA2NTcsLTk4NjE1MjAwNSw3Mj
-gwMzQ0ODgsNDE5NTg5MywtMTAyNjQxOTk3OCwxOTI3MDExNTc1
-LC0xMzU3NTc4MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMT
-UwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbMTQ4MjY3NzMxMiwzNzgwNzU3NDAsODExMD
+IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
+NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
+g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
+LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
