RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -208,13 +208,14 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		```
 		*  select explain 결과
 ![select explain 결과](https://github.com/tatarobo/Study/blob/master/RealMysql/image/pic13-2.png)
-
+			* Extra 컬럼에 **별도의 정렬 작업**을 의미하는 "**Using filesort**" 코멘트가 표시되지 않음
+			* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjk3OTQxNzA5LDM3ODA3NTc0MCw4MTEwMj
-EzODAsMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNzQzMjQ5ODk0
-LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYwNjU3LC05OD
-YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
-MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
-ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbLTEwMTQ1ODE0ODgsMzc4MDc1NzQwLDgxMT
+AyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAsLTE3NDMyNDk4
+OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMzAwNjA2NTcsLT
+k4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5MywtMTAyNjQxOTk3
+OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xODM2NzY4OTg4LC
+0xMTEzMTI3NzksMTUwOTc2NzU5OF19
 -->
