--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -209,13 +209,16 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		*  select explain 결과
 ![select explain 결과](https://github.com/tatarobo/Study/blob/master/RealMysql/image/pic13-2.png)
 			* Extra 컬럼에 **별도의 정렬 작업**을 의미하는 "**Using filesort**" 코멘트가 표시되지 않음
-			* 
+			* 동작
+				1) 파티션들로부터 where 조건에 일치하는 레코드를 가져옴
+				2) 각 파티션의 결과를 병합
+				3) reg_userid 칼럼값으로 다시 한번 정렬
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTQ1ODE0ODgsMzc4MDc1NzQwLDgxMT
-AyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAsLTE3NDMyNDk4
-OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMzAwNjA2NTcsLT
-k4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5MywtMTAyNjQxOTk3
-OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xODM2NzY4OTg4LC
-0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbMTc4Mjg3Njk4NSwzNzgwNzU3NDAsODExMD
+IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
+NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
+g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
+LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
