RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -210,15 +210,15 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 ![select explain 결과](https://github.com/tatarobo/Study/blob/master/RealMysql/image/pic13-2.png)
 			* Extra 컬럼에 **별도의 정렬 작업**을 의미하는 "**Using filesort**" 코멘트가 표시되지 않음
 			* 동작
-				1) 여러 파티션에 대해 **인덱스 스캔**을 수행할 때, **각 파티션으로부터 조건에 일치하는 레코드를 *정렬된 순서대로 읽으면서 우선순위 큐 (priority queue)* 에 임시로 저장**
-				2) 각 파티션의 결과를 병합
-				3) reg_userid 칼럼값으로 다시 한번 정렬
+				1) 여러 파티션에 대해 **인덱스 스캔**을 수행할 때, **각 파티션으로부터 조건에 일치하는 레코드를 정렬된 순서대로 읽으면서 *우선순위 큐 (priority queue)* 에 임시로 저장**
+				2) 우선순위 큐에서 다시 필요한 순서 (인덱스의 정렬 순서) 대로 데이터를 가져감
+			* 각 파티션에서 읽은 데이터가 이미 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNjIzMDA5MzQsMzc4MDc1NzQwLDgxMT
-AyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAsLTE3NDMyNDk4
-OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMzAwNjA2NTcsLT
-k4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5MywtMTAyNjQxOTk3
-OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xODM2NzY4OTg4LC
-0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbLTk5NTAzNTYzMCwzNzgwNzU3NDAsODExMD
+IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
+NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
+g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
+LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
