--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -212,13 +212,15 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 			* 동작
 				1) 여러 파티션에 대해 **인덱스 스캔**을 수행할 때, **각 파티션으로부터 조건에 일치하는 레코드를 정렬된 순서대로 읽으면서 *우선순위 큐 (priority queue)* 에 임시로 저장**
 				2) 우선순위 큐에서 다시 필요한 순서 (인덱스의 정렬 순서) 대로 데이터를 가져감
-			* 각 파티션에서 읽은 데이터가 이미 
+			* 각 파티션에서 읽은 데이터가 *이미 정렬돼 있는 상태라서* 가능한 방법
+		* 결론
+			* 파티션 테이블에서 인덱스 스캔을 통해 얻은 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk5NTAzNTYzMCwzNzgwNzU3NDAsODExMD
-IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
-NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
-g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
-LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
-ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbNDM0Njc1MzU0LDM3ODA3NTc0MCw4MTEwMj
+EzODAsMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNzQzMjQ5ODk0
+LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYwNjU3LC05OD
+YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
+MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
+ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
