RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -214,10 +214,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 				2) 우선순위 큐에서 다시 필요한 순서 (인덱스의 정렬 순서) 대로 데이터를 가져감
 			* 각 파티션에서 읽은 데이터가 *이미 정렬돼 있는 상태라서* 가능한 방법
 		* 결론
-			* 파티션 테이블에서 인덱스 스캔을 통해 얻은 
+			* 파티션 테이블에서 *인덱스 스캔*을 통해 레코드를 읽을 때 **MySQL 서버가 별도의 정렬 작업을 수행하지 않음**
+			* 일반 테이블의 인덱스 스캔처럼 바로 결과를 반환하지 않고, 내부적으로 큐 처리가 한번 필요함
+				* 위 그림에서 '머지 & 소트'라고 되어 있는 부분
+			* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDM0Njc1MzU0LDM3ODA3NTc0MCw4MTEwMj
+eyJoaXN0b3J5IjpbMzY1MDM2NTQ2LDM3ODA3NTc0MCw4MTEwMj
 EzODAsMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNzQzMjQ5ODk0
 LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYwNjU3LC05OD
 YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
