--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -217,13 +217,15 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 			* 파티션 테이블에서 *인덱스 스캔*을 통해 레코드를 읽을 때 **MySQL 서버가 별도의 정렬 작업을 수행하지 않음**
 			* 일반 테이블의 인덱스 스캔처럼 바로 결과를 반환하지 않고, 내부적으로 큐 처리가 한번 필요함
 				* 위 그림에서 '머지 & 소트'라고 되어 있는 부분
-			* 
+#### 파티션 프루닝
+* 옵티마이저에 의해 일부 파티션만 읽어도 된다고 판단되면 불필요한 파티션에는 전혀 접근하지 않음
+* 최적화된 단계에서 필요한 파티션만 골라내고 불필요한 것들은 실행 계획에서 배제하는 것을 파티션 프루닝이라고 함
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzY1MDM2NTQ2LDM3ODA3NTc0MCw4MTEwMj
-EzODAsMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNzQzMjQ5ODk0
-LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYwNjU3LC05OD
-YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
-MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
-ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbLTE4MjI3NzAyOCwzNzgwNzU3NDAsODExMD
+IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
+NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
+g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
+LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
