RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -219,10 +219,15 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 				* 위 그림에서 '머지 & 소트'라고 되어 있는 부분
 #### 파티션 프루닝
 * 옵티마이저에 의해 일부 파티션만 읽어도 된다고 판단되면 불필요한 파티션에는 전혀 접근하지 않음
-* 최적화된 단계에서 필요한 파티션만 골라내고 불필요한 것들은 실행 계획에서 배제하는 것을 파티션 프루닝이라고 함
+* 최적화된 단계에서 **필요한 파티션만 골라내고 불필요한 것들은 실행 계획에서 배제하는 것**을 **파티션 프루닝**이라고 함
+* 실행 계획을 확인하면 옵티마이저가 어떤 파티션만 접근하는지 알 수 있음
+	* explain partitions 명령어 사용해서 확인 가능
+## 10.2 주의사항
+### 10.2.1 파티션의 제한 사항
+* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MjI3NzAyOCwzNzgwNzU3NDAsODExMD
+eyJoaXN0b3J5IjpbMTA5NTI4NTE5OCwzNzgwNzU3NDAsODExMD
 IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
 NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
 g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
