RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -225,14 +225,16 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 ## 10.2 주의사항
 ### 10.2.1 파티션의 제한 사항
 * **숫자값** (INTEGER 타입 칼럼 또는 INTEGER 타입을 반환하는 함수 및 표현식)에 의해서만 파티션 가능
-	* MySQL 5.5 부터는 숫자 타입뿐 아니라 **문자열**이나 날짜 타입 모두 사용할 수 있음
-* **키 파티션**은 해시 함수를 MySQL이 직접 선택하기 때문에 칼럼 타입 제한이 없음
+	* MySQL 5.5 부터는 숫자 타입뿐 아니라 **문자열**이나 **날짜 타입** 모두 사용할 수 있음
+* **키 파티션**은 해시 함수를 MySQL이 직접 선택하기 때문에 **칼럼 타입 제한이 없음**
+* 최대 **1024개**의 파티션을 가질 수 있음 (서브 파티션 포함)
+* *스토어드 루틴이나 UDF, 사용자 변수 등* 을 파티션 함수나 식에 사용할 수 없음
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxNDk4NzExLDM3ODA3NTc0MCw4MTEwMj
-EzODAsMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNzQzMjQ5ODk0
-LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYwNjU3LC05OD
-YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
-MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
-ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbMjAwMTgyMzA4NCwzNzgwNzU3NDAsODExMD
+IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
+NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
+g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
+LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
