RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -228,10 +228,15 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* MySQL 5.5 부터는 숫자 타입뿐 아니라 **문자열**이나 **날짜 타입** 모두 사용할 수 있음
 * **키 파티션**은 해시 함수를 MySQL이 직접 선택하기 때문에 **칼럼 타입 제한이 없음**
 * 최대 **1024개**의 파티션을 가질 수 있음 (서브 파티션 포함)
-* *스토어드 루틴이나 UDF, 사용자 변수 등* 을 파티션 함수나 식에 사용할 수 없음
+* *스토어드 루틴이나 UDF, 사용자 변수 등* 을 파티션 함수나 식에 *사용할 수 없음*
+* 파티션 생성 이후 MySQL 서버의 sql_mode 파라미터 변경은 추천하지 않음
+	* sql_mode
+		* MySQL에 저장될 데이터에 대한 유효성 검사(validation check) 범위를 설정하는 시스템 변수  
+		* 출처
+			* [https://blog.jiniworld.me/64](https://blog.jiniworld.me/64) [hello jiniworld]
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAwMTgyMzA4NCwzNzgwNzU3NDAsODExMD
+eyJoaXN0b3J5IjpbLTgwMzA5OTMzMywzNzgwNzU3NDAsODExMD
 IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
 NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
 g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
