RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -231,12 +231,15 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 * *스토어드 루틴이나 UDF, 사용자 변수 등* 을 파티션 함수나 식에 *사용할 수 없음*
 * 파티션 생성 이후 MySQL 서버의 sql_mode 파라미터 변경은 추천하지 않음
 	* sql_mode
-		* MySQL에 저장될 데이터에 대한 유효성 검사(validation check) 범위를 설정하는 시스템 변수  
+		* MySQL에 저장될 데이터에 대한 유효성 검사 범위를 설정하는 시스템 변수
+		* 활성화 하고자 하는 모드를 `,` 구분자로 구분하여 한줄로 추가 
+		* MySQL 버전별로 default sql_mode값이 다름
+		* sql_mode를 설정하여 데이터 유효성 검사 범위를 커스터마이징 할 수 있음
 		* 출처
 			* [https://blog.jiniworld.me/64](https://blog.jiniworld.me/64) [hello jiniworld]
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgwMzA5OTMzMywzNzgwNzU3NDAsODExMD
+eyJoaXN0b3J5IjpbMTY2MzA4Njg4NCwzNzgwNzU3NDAsODExMD
 IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
 NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
 g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
