RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -229,20 +229,25 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 * **키 파티션**은 해시 함수를 MySQL이 직접 선택하기 때문에 **칼럼 타입 제한이 없음**
 * 최대 **1024개**의 파티션을 가질 수 있음 (서브 파티션 포함)
 * *스토어드 루틴이나 UDF, 사용자 변수 등* 을 파티션 함수나 식에 *사용할 수 없음*
-* 파티션 생성 이후 MySQL 서버의 sql_mode 파라미터 변경은 추천하지 않음
+* 파티션 생성 이후 MySQL 서버의 *sql_mode 파라미터 변경은 추천하지 않음*
 	* sql_mode
 		* MySQL에 저장될 데이터에 대한 유효성 검사 범위를 설정하는 시스템 변수
 		* 활성화 하고자 하는 모드를 `,` 구분자로 구분하여 한줄로 추가 
 		* MySQL 버전별로 default sql_mode값이 다름
 		* sql_mode를 설정하여 데이터 유효성 검사 범위를 커스터마이징 할 수 있음
+		* **현재 접속중인 세션에 적용되어있는 sql_mode를 조회**하는 방법
+			* SELECT @@sql_mode;
 		* 출처
 			* [https://blog.jiniworld.me/64](https://blog.jiniworld.me/64) [hello jiniworld]
+* 파티션 테이블은 **외래키 사용 불가**
+* 파티션 테이블은 **전문 검색  인덱스 생성 불가**
+* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY2MzA4Njg4NCwzNzgwNzU3NDAsODExMD
-IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
-NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
-g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
-LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
-ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbODc2Njg0MjYzLDM3ODA3NTc0MCw4MTEwMj
+EzODAsMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNzQzMjQ5ODk0
+LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYwNjU3LC05OD
+YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
+MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
+ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
