--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -244,14 +244,18 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 * *공간 확장 기능*에서 제공되는 칼럼 타입 (POINT, GEOMETRY, ..)은 파티션 테이블에서 사용 불가
 * **임시 테이블**은 파티션 기능 **사용 불가**
 * MyISAM 파티션 테이블의 경우 키 캐시를 사용할 수 없음 (MySQL 5.5 부터는 이 버그가 보완됨)
-* 파티션 키의 *표현식*은 **칼럼 그 자체**, 혹은 **MySQL 내장 함수**를 사용할 수 있음
-	* 
+* 파티션 키의 *표현식*은 **칼럼 그 자체**, 혹은 **MySQL 내장 함수 중 일부**를 사용할 수 있음
+	* 정상적인 파티션 프루닝을 제공하는 함수
+		* YEAR()
+		* TO_DAYS()
+		* TO_SECONDS()
+	* 파티션 프루닝을 활
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTIwMzE3NTk2LDM3ODA3NTc0MCw4MTEwMj
-EzODAsMjEyODk3MjA4MiwtNzAzODU4MTAwLC0xNzQzMjQ5ODk0
-LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMTMwMDYwNjU3LC05OD
-YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
-MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
-ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbMTM3MTM2OTk4NSwzNzgwNzU3NDAsODExMD
+IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
+NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
+g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
+LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
