RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -248,11 +248,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* 정상적인 파티션 프루닝을 제공하는 함수
 		* YEAR()
 		* TO_DAYS()
-		* TO_SECONDS()
-	* 파티션 프루닝을 활
-
+		* TO_SECONDS() : MySQL 5.5부터 지원됨
+	* 파티션 프루닝을 활용하려면 아래를 사용한 표현식을 파티션 키로 사용할 것을 권장
+		* INTEGER 타입의 컬럼 그 자체
+		* 위 3가지 함수
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM3MTM2OTk4NSwzNzgwNzU3NDAsODExMD
+eyJoaXN0b3J5IjpbMTg2ODcyOTY3MywzNzgwNzU3NDAsODExMD
 IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
 NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
 g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
