RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -252,9 +252,11 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* 파티션 프루닝을 활용하려면 아래를 사용한 표현식을 파티션 키로 사용할 것을 권장
 		* INTEGER 타입의 컬럼 그 자체
 		* 위 3가지 함수
+* MySQL의 파티션에서 인덱스는 모두 *로컬 인덱스*
+* **같은 테이블**에 소속돼 있는 모든 파티션은 **같은 구조의 인덱스만 가질 수 있음**
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg2ODcyOTY3MywzNzgwNzU3NDAsODExMD
+eyJoaXN0b3J5IjpbMTQ0NDU0NjY4MSwzNzgwNzU3NDAsODExMD
 IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
 NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
 g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
