RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -254,12 +254,14 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 위 3가지 함수
 * MySQL의 파티션에서 인덱스는 모두 *로컬 인덱스*
 * **같은 테이블**에 소속돼 있는 모든 파티션은 **같은 구조의 인덱스만 가질 수 있음**
-* 
+* 하나의 테이블에 소속된 파티션은 *다른 종류의 스토리지 엔진으로 구성하는 것*을  *추천하지 않음*
+### 10.2.2 파티션 사용 시 주의 사항
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ0NDU0NjY4MSwzNzgwNzU3NDAsODExMD
-IxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEwMCwtMTc0MzI0OTg5
-NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
-g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
-LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
-ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbNTIxMzkyOTU5LDE0NDQ1NDY2ODEsMzc4MD
+c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
+LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
+AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
+MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
+M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
 -->
