RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -257,16 +257,22 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 * 하나의 테이블에 소속된 파티션은 *다른 종류의 스토리지 엔진으로 구성하는 것*을  *추천하지 않음*
 
 > 참고
->   * 
->   
+>   * MySQL 5.1 이상 버전에서 파티션 표현식에 사용할 수 있는 함수
+>     * ABS()
+>     * CELING()
+>     * DAY()
+>     * DAYOFMONTH()
+>     * DAUOFWEEK()
+>     * DAYOFYEAR()
+>     DATEDIFF() 
 
 ### 10.2.2 파티션 사용 시 주의 사항
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjM2NTQwNDU1LDE0NDQ1NDY2ODEsMzc4MD
-c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
-LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
-AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
-MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
-M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbLTgyMDExNjg4NCwxNDQ0NTQ2NjgxLDM3OD
+A3NTc0MCw4MTEwMjEzODAsMjEyODk3MjA4MiwtNzAzODU4MTAw
+LC0xNzQzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMT
+MwMDYwNjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMs
+LTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMT
+gzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
