RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -264,15 +264,30 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 >     * DAYOFMONTH()
 >     * DAUOFWEEK()
 >     * DAYOFYEAR()
->     DATEDIFF() 
+>     * DATEDIFF() 
+>     * EXTRACT()
+>     * FLOOR()
+>     * HOUR()
+>     * MICROSECOND()
+>     * MINUTE()
+>     * MOD()
+>     * MONTH()
+>     * QUARTER()
+>     * SECOND()
+>     * TIME_TO_SEC()
+>     * TO_DAYS()
+>     * WEEKDAY()
+>     * YEAR()
+>     * YEARWEEK()
+>   * SUBSTRING() 이나 ASCII() 같은 문자열 함수는 파티션 표현식에 사용 불가능
 
 ### 10.2.2 파티션 사용 시 주의 사항
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgyMDExNjg4NCwxNDQ0NTQ2NjgxLDM3OD
-A3NTc0MCw4MTEwMjEzODAsMjEyODk3MjA4MiwtNzAzODU4MTAw
-LC0xNzQzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMT
-MwMDYwNjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMs
-LTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMT
-gzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbLTIwNzI3MTA1NjUsMTQ0NDU0NjY4MSwzNz
+gwNzU3NDAsODExMDIxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEw
+MCwtMTc0MzI0OTg5NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLT
+EzMDA2MDY1NywtOTg2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkz
+LC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLT
+E4MzY3Njg5ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
