RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -279,12 +279,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 >     * WEEKDAY()
 >     * YEAR()
 >     * YEARWEEK()
->   * SUBSTRING() 이나 ASCII() 같은 문자열 함수는 파티션 표현식에 사용 불가능
+>   * SUBSTRING() 이나 ASCII() 같은 **문자열 함수**는 파티션 표현식에 *사용 불가능*
 
 ### 10.2.2 파티션 사용 시 주의 사항
-* 
+* 프라이머리 키를 포함한 유니크 키
+	* 파티션의 목적은 작업의 범위를 좁히기 위함인데, 유니크 인덱스는 중복 레코드 방지를 위한 체크 작업 때문에 범위가 좁혀지지 않으
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNzI3MTA1NjUsMTQ0NDU0NjY4MSwzNz
+eyJoaXN0b3J5IjpbLTE3NTQ3MjQ4NTMsMTQ0NDU0NjY4MSwzNz
 gwNzU3NDAsODExMDIxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEw
 MCwtMTc0MzI0OTg5NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLT
 EzMDA2MDY1NywtOTg2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkz
