RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -283,12 +283,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 
 ### 10.2.2 파티션 사용 시 주의 사항
 * 프라이머리 키를 포함한 유니크 키
-	* 파티션의 목적은 작업의 범위를 좁히기 위함인데, 유니크 인덱스는 중복 레코드 방지를 위한 체크 작업 때문에 범위가 좁혀지지 않으
+	* 파티션의 목적은 작업의 범위를 좁히기 위함인데, **유니크 인덱스**는 중복 레코드 방지를 위한 체크 작업 때문에 범위가 좁혀지지 않음
+* MySQL 파티션 또한 테이블과 같이 별도의 파일로 관리되기 때문에 MySQL 서버가 조작할 수 있는 파이르이 개수와도 연관된 제약이 있음
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTQ3MjQ4NTMsMTQ0NDU0NjY4MSwzNz
-gwNzU3NDAsODExMDIxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEw
-MCwtMTc0MzI0OTg5NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLT
-EzMDA2MDY1NywtOTg2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkz
-LC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLT
-E4MzY3Njg5ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbNjQ5NzMyNjIwLDE0NDQ1NDY2ODEsMzc4MD
+c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
+LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
+AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
+MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
+M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
 -->
