--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -283,13 +283,15 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 
 ### 10.2.2 파티션 사용 시 주의 사항
 * 프라이머리 키를 포함한 유니크 키
-	* 파티션의 목적은 작업의 범위를 좁히기 위함인데, **유니크 인덱스**는 중복 레코드 방지를 위한 체크 작업 때문에 범위가 좁혀지지 않음
-* MySQL 파티션 또한 테이블과 같이 별도의 파일로 관리되기 때문에 MySQL 서버가 조작할 수 있는 파이르이 개수와도 연관된 제약이 있음
+	* 파티션의 목적은 작업의 범위를 좁히기 위함인데, *유니크 인덱스*는 중복 레코드 방지를 위한 체크 작업 때문에 *범위가 좁혀지지 않음*
+* MySQL 파티션 또한 테이블과 같이 *별도의 파일로 관리*되기 때문에 MySQL 서버가 조작할 수 있는 *파일의 개수*와도 연관된 제약이 있음
+#### 파티션과 유니크 키 (프라이머리 키 포함)
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQ5NzMyNjIwLDE0NDQ1NDY2ODEsMzc4MD
-c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
-LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
-AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
-MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
-M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbMTMyMzU2NDI3MywxNDQ0NTQ2NjgxLDM3OD
+A3NTc0MCw4MTEwMjEzODAsMjEyODk3MjA4MiwtNzAzODU4MTAw
+LC0xNzQzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMT
+MwMDYwNjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMs
+LTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMT
+gzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
