RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -286,15 +286,37 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* 파티션의 목적은 작업의 범위를 좁히기 위함인데, *유니크 인덱스*는 중복 레코드 방지를 위한 체크 작업 때문에 *범위가 좁혀지지 않음*
 * MySQL 파티션 또한 테이블과 같이 *별도의 파일로 관리*되기 때문에 MySQL 서버가 조작할 수 있는 *파일의 개수*와도 연관된 제약이 있음
 #### 파티션과 유니크 키 (프라이머리 키 포함)
-* 예시
+* 아래는 모두 틀린 예시
 ```
 CREATE TABLE tb_partition (
- fd
+ fd1 INT NOT NULL,
+ fd2 INT NOT NULL,
+ fd3 INT NOT NULL,
+ UNIQUE KEY (fd1, fd2)
 ) PARTITION BY HASH (fd3)
 PARTITIONS 4;
+
+CREATE TABLE tb_partition (
+ fd1 INT NOT NULL,
+ fd2 INT NOT NULL,
+ fd3 INT NOT NULL,
+ UNIQUE KEY (fd1),
+ UNIQUE KEY (fd2)
+) PARTITION BY HASH (fd1 + fd2)
+PARTITIONS 4;
+
+CREATE TABLE tb_partition (
+ fd1 INT NOT NULL,
+ fd2 INT NOT NULL,
+ fd3 INT NOT NULL,
+ PRIMARY KEY (fd1)
+ UNIQUE KEY (fd2, fd3)
+) PARTITION BY HASH (fd1 + fd2)
+PARTITIONS 4;
 ```
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxNjEzNDMxMCwxNDQ0NTQ2NjgxLDM3OD
+eyJoaXN0b3J5IjpbMTc5NjExMDEzMSwxNDQ0NTQ2NjgxLDM3OD
 A3NTc0MCw4MTEwMjEzODAsMjEyODk3MjA4MiwtNzAzODU4MTAw
 LC0xNzQzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMT
 MwMDYwNjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMs
