RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -288,6 +288,7 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 #### 파티션과 유니크 키 (프라이머리 키 포함)
 * 아래는 모두 틀린 예시
 ```
+/* u */
 CREATE TABLE tb_partition (
  fd1 INT NOT NULL,
  fd2 INT NOT NULL,
@@ -314,12 +315,13 @@ CREATE TABLE tb_partition (
 ) PARTITION BY HASH (fd1 + fd2)
 PARTITIONS 4;
 ```
-
+* 유니크 키에 대해 파티션 키가 제대로 설정됐는지 체크하는 간단한 방법
+	* **유니크 키**에 대해 값이 주어지면 해당 레코드가 **어느 파티션에 저장되어 있는지 *계산할 수 있어야 함***
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5NjExMDEzMSwxNDQ0NTQ2NjgxLDM3OD
-A3NTc0MCw4MTEwMjEzODAsMjEyODk3MjA4MiwtNzAzODU4MTAw
-LC0xNzQzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMT
-MwMDYwNjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMs
-LTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMT
-gzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbNTY0NzQyNjE1LDE0NDQ1NDY2ODEsMzc4MD
+c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
+LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
+AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
+MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
+M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
 -->
