RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -307,7 +307,7 @@ CREATE TABLE tb_partition (
 PARTITIONS 4;
 /* 첫번째 유니크 키 칼럼인 fd1 만으로 파티션이 결정되지 않음.
  * fd2 칼럽 값도 같이 있어야 파티션 위치 파악 가능 
- * 두 번째 유*/
+ * 두 번째 유니크 키는 첫번째와 같은 이유로 불가능 */
 
 CREATE TABLE tb_partition (
  fd1 INT NOT NULL,
@@ -317,14 +317,33 @@ CREATE TABLE tb_partition (
  UNIQUE KEY (fd2, fd3)
 ) PARTITION BY HASH (fd1 + fd2)
 PARTITIONS 4;
+/* pk 칼럼인 fd1 값만으로 파티션 판단이 되지 않음
+ * 유니크 키인 fd2와 fd3으로도 파티션 키를 결정할 수 없음 */
 ```
 * 유니크 키에 대해 파티션 키가 제대로 설정됐는지 체크하는 간단한 방법
 	* **유니크 키**에 대해 값이 주어지면 해당 레코드가 **어느 파티션에 저장되어 있는지 *계산할 수 있어야 함***
+* 아래는 가능한 예시
+```
+CREATE TABLE tb_partition (
+ fd1 INT NOT NULL,
+ fd2 INT NOT NULL,
+ fd3 INT NOT NULL,
+ UNIQUE KEY (fd1, fd2, fd3)
+) PARTITION BY HASH (fd1)
+PARTITIONS 4;
+CREATE TABLE tb_partition (
+ fd1 INT NOT NULL,
+ fd2 INT NOT NULL,
+ fd3 INT NOT NULL,
+ UNIQUE KEY (fd1, fd2, fd3)
+) PARTITION BY HASH (fd1)
+PARTITIONS 4;
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MjkyMTM2NDgsMTQ0NDU0NjY4MSwzNz
-gwNzU3NDAsODExMDIxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEw
-MCwtMTc0MzI0OTg5NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLT
-EzMDA2MDY1NywtOTg2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkz
-LC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLT
-E4MzY3Njg5ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbNzg1MTkxNDk4LDE0NDQ1NDY2ODEsMzc4MD
+c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
+LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
+AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
+MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
+M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
 -->
