RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -331,19 +331,31 @@ CREATE TABLE tb_partition (
  UNIQUE KEY (fd1, fd2, fd3)
 ) PARTITION BY HASH (fd1)
 PARTITIONS 4;
+
 CREATE TABLE tb_partition (
  fd1 INT NOT NULL,
  fd2 INT NOT NULL,
  fd3 INT NOT NULL,
- UNIQUE KEY (fd1, fd2, fd3)
-) PARTITION BY HASH (fd1)
+ UNIQUE KEY (fd1, fd2)
+) PARTITION BY HASH (fd1 + fd2)
+PARTITIONS 4;
+
+CREATE TABLE tb_partition (
+ fd1 INT NOT NULL,
+ fd2 INT NOT NULL,
+ fd3 INT NOT NULL,
+ UNIQUE KEY (fd1, fd2, fd3),
+ UNIQUE KEY (fd3)
+) PARTITION BY HASH (fd3)
 PARTITIONS 4;
 ```
+* 유니크 키를 구성하는 컬럼의 값이 결정되면 해당 레코드가 어느 파티션에 저장돼 있는지 위치를 계산할 수 있음
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzg1MTkxNDk4LDE0NDQ1NDY2ODEsMzc4MD
-c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
-LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
-AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
-MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
-M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbLTE0MzYwMDcxNTksMTQ0NDU0NjY4MSwzNz
+gwNzU3NDAsODExMDIxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEw
+MCwtMTc0MzI0OTg5NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLT
+EzMDA2MDY1NywtOTg2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkz
+LC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLT
+E4MzY3Njg5ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
