RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -350,12 +350,18 @@ CREATE TABLE tb_partition (
 PARTITIONS 4;
 ```
 * 유니크 키를 구성하는 컬럼의 값이 결정되면 해당 레코드가 어느 파티션에 저장돼 있는지 위치를 계산할 수 있음
-* 
+* 파티션 방식에 상관없이 모든 파티션 테이블에서 pk 나 유니크 인덱스를 생성하기 위해 지켜야 할 요건
+
+> 참고
+>   * 주어진 테이블에서 파티션 키를 직접 선택해야 하는 경우 진행 방법
+>     1. 테이블에서 중복을 허용하지 않는 pk와 유니크 인덱스 선별
+>     2. pk와 유니크 인덱스dp 
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MzYwMDcxNTksMTQ0NDU0NjY4MSwzNz
-gwNzU3NDAsODExMDIxMzgwLDIxMjg5NzIwODIsLTcwMzg1ODEw
-MCwtMTc0MzI0OTg5NCw2Nzc5MjUwOTYsLTEwNzAzNzI0MzMsLT
-EzMDA2MDY1NywtOTg2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkz
-LC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLT
-E4MzY3Njg5ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbODExOTM1OTc1LDE0NDQ1NDY2ODEsMzc4MD
+c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
+LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
+AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
+MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
+M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
 -->
