RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -355,13 +355,15 @@ PARTITIONS 4;
 > 참고
 >   * 주어진 테이블에서 파티션 키를 직접 선택해야 하는 경우 진행 방법
 >     1. 테이블에서 중복을 허용하지 않는 pk와 유니크 인덱스 선별
->     2. pk와 유니크 인덱스dp 
+>     2. pk와 유니크 인덱스에 공통적으로 포함돼 있는 칼럼만 수집
+>     3. 테이블에 pk만 있으면 pk를 구성하는 칼럼만 수집
+>     4. 2번에서 수집한 칼럼 중 일부 또는 전체를 사용한 표현식은 **파티션 표현식으로 사용할 수 있음** (별도의 표현식 없이 **그대로 사용하는 것도 가능**)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODExOTM1OTc1LDE0NDQ1NDY2ODEsMzc4MD
-c1NzQwLDgxMTAyMTM4MCwyMTI4OTcyMDgyLC03MDM4NTgxMDAs
-LTE3NDMyNDk4OTQsNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
-AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
-MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
-M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbMTUxODAxMjU2MSwxNDQ0NTQ2NjgxLDM3OD
+A3NTc0MCw4MTEwMjEzODAsMjEyODk3MjA4MiwtNzAzODU4MTAw
+LC0xNzQzMjQ5ODk0LDY3NzkyNTA5NiwtMTA3MDM3MjQzMywtMT
+MwMDYwNjU3LC05ODYxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMs
+LTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMT
+gzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
