--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -114,9 +114,15 @@ WHERE e.emp_no=tb.emp_no;
 
 성능이 빠른 순서대로 나열.
 * **system**
-	* 
+	* 레코드가 1건 또는 존재하지 않는 테이블을 참조하는 형태
+		* InnoDB에서는 ALL 또는 index로 표시.
 * **const**
+	* 레코드의 건수와 관계 없이 쿼리가 프라이머리 키나 유니크 키 칼럼을 이용하는 WHERE 조건절을 가지고 있으며, 반드시 1건을 반환하는 쿼리의 처리 방식. p281-3
+		* 프라이머리키가 다중 칼럼으로 구성 시 모든 칼럼이 포함되어야지만 해당 접근 방법 사용
+		* 다른 DBMS에서는 UNIQUE INDEX SCAN이라고 표현
+		* type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 상수화 한다. p283-1
 * **eq_ref**
+	* 여러 테이블이 조인되는 쿼리의 실행 계획에서만 표시.
 * **ref**
 * **fulltest**
 * **ref_or_null**
@@ -127,10 +133,11 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMD
-c3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAz
-NzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxOD
-U3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3
-MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0Ni
-wxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMT
+U0MDg4MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1
+MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLD
+cyNzAyMzk2OCwxODU3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMz
+NDA5LDEwNDY0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMz
+EsMTk5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
+
 -->
