RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -122,7 +122,7 @@ WHERE e.emp_no=tb.emp_no;
 		* 다른 DBMS에서는 UNIQUE INDEX SCAN이라고 표현
 		* type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 상수화 한다. p283-1
 * **eq_ref**
-	* 여러 테이블이 조인되는 쿼리의 실행 계획에서만 표시.
+	* 여러 테이블이 조인되는 쿼리의 실행 계획에서만 표시. 조인에서 주 번째 이후에 읽는 테이블에서 반드시 1건만 존재한다는 보장이 있을 때 사용하는 접근 방법.
 * **ref**
 * **fulltest**
 * **ref_or_null**
@@ -133,11 +133,11 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMT
-U0MDg4MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1
-MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLD
-cyNzAyMzk2OCwxODU3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMz
-NDA5LDEwNDY0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMz
-EsMTk5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
-
+eyJoaXN0b3J5IjpbMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMT
+cyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkz
+ODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LD
+E0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3Nzkz
+MDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NC
+wtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4
+MzkzNzY0MjBdfQ==
 -->
