--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -122,7 +122,7 @@ WHERE e.emp_no=tb.emp_no;
 		* 다른 DBMS에서는 UNIQUE INDEX SCAN이라고 표현
 		* type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 상수화 한다. p283-1
 * **eq_ref**
-	* 여러 테이블이 조인되는 쿼리의 실행 계획에서만 표시. 조인에서 두 번째 이후에 읽는 테이블에서 반드시 1건만 존재한다는 보장이 있을 때 사용하는 접근 방법.
+	* 여러 테이블이 조인되는 쿼리의 실행 계획에서만 표시. 조인에서 **두 번째 이후에 읽는 테이블에서 반드시 1건만 존재한다는 보장**이 있을 때 사용하는 접근 방법.
 * **ref**
 	* 조인의 순서와 관계없이 사용되며, 프라이머리 키나 유니크 키등의 제약 조건도 없다. 동등 조건으로 검색할 때 사용되는 방법.
 * **fulltest**
@@ -134,7 +134,7 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ0ODYzMTEyNiwxODc5OTk0NTUzLC0xND
+eyJoaXN0b3J5IjpbMjA1NjMxMTE5MCwxODc5OTk0NTUzLC0xND
 kwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAz
 NjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LD
 E0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3
