RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -117,14 +117,14 @@ WHERE e.emp_no=tb.emp_no;
 	* 레코드가 1건 또는 존재하지 않는 테이블을 참조하는 형태
 		* InnoDB에서는 ALL 또는 index로 표시.
 * **const**
-	* 레코드의 건수와 관계 없이 **쿼리가 프라이머리 키나 유니크 키 칼럼을 이용**하는 WHERE 조건절을 가지고 있으며, **반드시 1건을 반환**하는 쿼리의 처리 방식. p281-3
+	* 프라이머리 키나 유니크 키에 대해 동등 조건으로 검색. **반드시 1건의 레코드 반환** p281-3
 		* 프라이머리키가 다중 칼럼으로 구성 시 모든 칼럼이 포함되어야지만 해당 접근 방법 사용
 		* 다른 DBMS에서는 UNIQUE INDEX SCAN이라고 표현
 		* type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 상수화 한다. p283-1
 * **eq_ref**
 	* 여러 테이블이 조인되는 쿼리의 실행 계획에서만 표시. 조인에서 **두 번째 이후에 읽는 테이블에서 반드시 1건만 존재한다는 보장**이 있을 때 사용하는 접근 방법.
 * **ref**
-	* 조인의 순서와 관계없이 사용되며, 프라이머리 키나 유니크 키등의 제약 조건도 없다. **동등 조건으로 검색**할 때 사용되는 방법.
+	* 조인의 순서와 관계없이 사용되며, 프라이머리 키나 유니크 키등의 제약 조건도 없다. **WHERE 절에 동등 조건으로 검색**할 때 사용되는 방법.
 * **fulltest**
 * **ref_or_null**
 * **unique_subquery**
@@ -134,11 +134,11 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0MzAyMTE0MiwxODc5OTk0NTUzLC0xND
-kwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAz
-NjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LD
-E0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3
-MDQxNiwtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC
-0xMzEzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0
-ODU3NTA1NF19
+eyJoaXN0b3J5IjpbLTEzMzk4NDYxNDgsMTg3OTk5NDU1MywtMT
+Q5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcw
+MzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3Ny
+wxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2
+NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNi
+wtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5
+NDg1NzUwNTRdfQ==
 -->
